<update> flag bag image